# Multipurpose-Bot

./: .breakpoints  README.md  anal.txt  av.txt  blahblah  boobs.txt  brh iuo.md  hentai.txt  hot.txt  hug.txt  kill.txt  main.py  main_imports.py  nep.txt  pat.txt  porn.txt  pyproject.toml  slap.txt  slow.txt
anime/: hug.py  kill.py  nep.py  pat.py  slap.py
botmisc/: invite.py  report.py  support.py  top.py  vote.py
fun/: flip.py  gay.py  meme.py  say.py  sendav.py  simp.py  tds.py  wife.py
help/: help.py
misc/: misc1.py
moderation/: announce.py  ban.py  kick.py  purge.py  role.py  slowmode.py  warn.py
nsfw/: nsfw.py
