[tool.poetry]
name = "repl_python3_beta_Main-perseus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
steam = "^1.2.0"
youtube_dl = "^2021.6.6"
aiohttp = "^3.7.4"
art = "^5.2"
dblpy = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
